--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,7 +63,43 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
+
+    .library {
+      list-style: none;
+      display: flex;
+      padding: 0.15rem;
+      background-color: white;
+      background-image: var(--accent-gradient);
+      background-size: 400%;
+      border-radius: 0.5rem;
+      background-position: 100%;
+      transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+        0 2px 4px -2px rgba(0, 0, 0, 0.1);
+      text-transform: capitalize;
+    }
+  
+    p {
+      margin-top: 0.5rem;
+      margin-bottom: 0;
+      color: #444;
+    }
+    .link-card:is(:hover, :focus-within) {
+      background-position: 0;
+    }
+    .link-card:is(:hover, :focus-within) a {
+      color: rgb(var(--accent));
+    }
   }
+  .sidebar {
+    @apply border backdrop-blur-[15px] rounded-[33px] border-solid border-[#0C1534];
+    background: linear-gradient(
+      173deg,
+      rgba(53, 62, 108, 0.77) 23.38%,
+      rgba(65, 111, 154, 0) 94.4%
+    );
+  }
+  
 }
  
 @layer base {
